deploy with commit v2

--- a/infra/app/deployment.yml
+++ b/infra/app/deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: apc-simulator
-          image: lusifar/apc-simulator:v2
+          image: gcr.io/project_id/image:commit_SHA
           ports:
             - containerPort: 3030
           env:
