--- a/infra/app/deployment.yml
+++ b/infra/app/deployment.yml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: apc-simulator
           image: gcr.io/project_id/image:commit_SHA
+          imagePullPolicy: Never
           ports:
             - containerPort: 3030
           env:
