--- a/infra/app/deployment.yml
+++ b/infra/app/deployment.yml
@@ -14,8 +14,8 @@ spec:
     spec:
       containers:
         - name: apc-simulator
-          image: gcr.io/project_id/image:commit_SHA
-          imagePullPolicy: Never
+          # image: lusifar/apc-simulator:v2
+          image: gcr.io/PROJECT_ID/IMAGE:TAG
           ports:
             - containerPort: 3030
           env:
