--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,6 +74,13 @@ jobs:
         ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
         ./kustomize build . | kubectl apply -f -
         kubectl rollout status deployment/$DEPLOYMENT_NAME
+    - name: Deploy-mongodb
+      run: |-
+        cd ./infra # 如果 mainfest 是放在某一個資料夾，這邊要替換成該資料夾名稱
+        kubectl apply -f mongodb/googlecloud_ssd.yml
+        kubectl apply -f mongodb/mongo-statefulset.yml
+        kubectl rollout status deployment/mongodb-service
+        kubectl get services -o wide
     - name: Get-logs
       run: |-
         kubectl logs -l app=apc-simulator
